# pype

./: .gitignore  README.md  core.py  pyproject.toml  utils.py
.github/workflows/: publish.yml  pylint.yml  python-package.yml
miniplumber/: __init__.py  core.py  utils.py
pype/: __init__.py  core.py
test/: test_core.py  test_integration.py  test_utils.py
